# insta-example

./: Cargo.toml  README.md  justfile
docs/: _index.md  advanced.md  cli.md  cmd.md  patterns.md  quickstart.md  redactions.md  serializers.md  settings.md  snapshot-files.md  vscode.md
src/: lib.rs
tests/: test_snapshots.rs
tests/snapshots/: test_snapshots__calculate_sum.snap  test_snapshots__debug_snapshot.snap  test_snapshots__format_user.snap  test_snapshots__split_words.snap  test_snapshots__user_struct.snap
