[package]
name = "example"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
authors = ["itscheems"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
insta = { version = "1.46.1", features = ["yaml"] }

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3
